# wellbench

./: .gitignore  LICENSE  README.md  examples.py  pyproject.toml
CTGAN_files/: best_params_r1.json  best_params_r2.json  best_params_r4.json  ctgan_r5.pkl
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  quickstart.rst  regions.rst
physical_model_files/: hp_optimised_r1.json  hp_optimised_r2.json  hp_optimised_r3.json  hp_optimised_r4.json  hp_optimised_r5.json  softmax_weights_r1.json  softmax_weights_r2.json  softmax_weights_r3.json  softmax_weights_r4.json  softmax_weights_r5.json
research_files/: README.md  pyproject.toml
research_files/notebooks/: final_CTGAN_TRTR_ML_models_study.ipynb  final_CTGAN_TSTR_classic_ML_models_study.ipynb  final_POFM_TRTR_ML_models_study.ipynb  final_POFM_TSTR_classic_ML_models_study.ipynb  final_optimal_GAN_based_generation.ipynb  final_optimal_Physics_based_generation.ipynb
research_files/scripts/: _local_setup.py  final_ctgan_trtr_ml_models_study.py  final_ctgan_tstr_classic_ml_models_study.py  final_optimal_gan_based_generation.py  final_optimal_physics_based_generation.py  final_pofm_trtr_ml_models_study.py  final_pofm_tstr_classic_ml_models_study.py
src/: __init__.py  benchmark.py  cli.py  ctgan_generator.py  generator.py  regions.py
src/ctgan_models/: ctgan_r1.pkl  ctgan_r2.pkl  ctgan_r3.pkl  ctgan_r4.pkl
