[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wellbench"
version = "0.1.0"
description = "Physics-based synthetic well-log benchmark generator"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "well-log",
    "synthetic-data",
    "benchmark",
    "petrophysics",
    "pore-pressure",
    "ctgan",
]
authors = [
    { name = "wellbench contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
ctgan = [
    "ctgan>=0.10",
    "torch>=2.0",
]
docs = [
    "sphinx>=7",
    "furo>=2024.1",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/wellbench"
Documentation = "https://github.com/your-org/wellbench#readme"
Source = "https://github.com/your-org/wellbench"
Issues = "https://github.com/your-org/wellbench/issues"

[project.scripts]
wellbench = "wellbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wellbench"]

[tool.hatch.build.targets.sdist]
include = [
    "src/wellbench",
    "README.md",
    "LICENSE",
    "examples.py",
    "docs",
]
